--- a/src/config.json
+++ b/src/config.json
@@ -113,8 +113,6 @@
             "fallback": "misc",
             "items": [
                 "minecraft:acacia_leaves",
-                "minecraft:beetroot",
-                "minecraft:beetroot_seeds",
                 "minecraft:birch_leaves",
                 "minecraft:brown_mushroom",
                 "minecraft:brown_mushroom_block",
@@ -133,22 +131,16 @@
                 "minecraft:jungle_leaves",
                 "minecraft:large_fern",
                 "minecraft:lily_pad",
-                "minecraft:melon",
-                "minecraft:melon_seeds",
                 "minecraft:mushroom_stem",
                 "minecraft:nether_wart",
                 "minecraft:oak_leaves",
                 "minecraft:poisonous_potato",
-                "minecraft:pumpkin",
-                "minecraft:pumpkin_seeds",
                 "minecraft:red_mushroom",
                 "minecraft:red_mushroom_block",
                 "minecraft:spruce_leaves",
                 "minecraft:sugar_cane",
                 "minecraft:tall_grass",
                 "minecraft:vine",
-                "minecraft:wheat",
-                "minecraft:wheat_seeds",
                 "minecraft:bamboo_sapling",
                 "minecraft:cornflower",
                 "minecraft:lily_of_the_valley",
@@ -158,7 +150,6 @@
                 "minecraft:potted_wither_rose",
                 "minecraft:sweet_berry_bush",
                 "minecraft:wither_rose",
-                "minecraft:sweet_berries",
                 "minecraft:bamboo",
                 "minecraft:potted_acacia_sapling",
                 "minecraft:potted_allium",
@@ -217,35 +208,43 @@
             "fallback": "misc",
             "items": [
                 "minecraft:apple",
-                "minecraft:baked_potato",
-                "minecraft:beetroot_soup",
+                "minecraft:wheat_seeds",
+                "minecraft:wheat",
                 "minecraft:bread",
-                "minecraft:cake",
-                "minecraft:carrot",
-                "minecraft:cooked_beef",
-                "minecraft:cooked_chicken",
-                "minecraft:cooked_cod",
-                "minecraft:cooked_mutton",
-                "minecraft:cooked_porkchop",
-                "minecraft:cooked_rabbit",
-                "minecraft:cooked_salmon",
-                "minecraft:cookie",
+                "minecraft:melon_seeds",
                 "minecraft:melon_slice",
-                "minecraft:mushroom_stew",
+                "minecraft:melon",
+                "minecraft:pumpkin_seeds",
+                "minecraft:pumpkin",
                 "minecraft:pumpkin_pie",
-                "minecraft:rabbit_stew",
-                "minecraft:sugar",
-                "minecraft:suspicious_stew",
-                "minecraft:bone_block",
-                "minecraft:bone_meal",
-                "minecraft:beef",
-                "minecraft:chicken",
-                "minecraft:cod",
-                "minecraft:mutton",
-                "minecraft:porkchop",
+                "minecraft:beetroot_seeds",
+                "minecraft:beetroot",
+                "minecraft:beetroot_soup",
+                "minecraft:carrot",
                 "minecraft:potato",
+                "minecraft:baked_potato",
+                "minecraft:sweet_berries",
+                "minecraft:cod",
+                "minecraft:cooked_cod",
+                "minecraft:salmon",
+                "minecraft:cooked_salmon",
+                "minecraft:beef",
+                "minecraft:cooked_beef",
+                "minecraft:chicken",
+                "minecraft:cooked_chicken",
+                "minecraft:mutton",
+                "minecraft:cooked_mutton",
+                "minecraft:porkchop",
+                "minecraft:cooked_porkchop",
                 "minecraft:rabbit",
-                "minecraft:salmon"
+                "minecraft:cooked_rabbit",
+                "minecraft:rabbit_stew",
+                "minecraft:cookie",
+                "minecraft:cake",
+                "minecraft:mushroom_stew",
+                "minecraft:suspicious_stew",
+                "minecraft:bone_meal",
+                "minecraft:bone_block"
             ]
         },
         {
@@ -911,6 +910,7 @@
             "item_frame": "minecraft:glass_bottle",
             "fallback": "misc",
             "items": [
+                "minecraft:sugar",
                 "minecraft:blaze_powder",
                 "minecraft:blaze_rod",
                 "minecraft:brewing_stand",
